[tool.poetry]
name = "ska-ser-config-inspector-client"
version = "0.2.2"
description = "Client library for Config Inspector API (CIA)."
authors = ["ATLAS"]
license = "BSD 3-Clause"
readme = "README.md"
keywords = ["OpenAPI", "OpenAPI-Generator", "config-inspector"]
include = ["ska_ser_config_inspector_client/py.typed"]
packages = [{ include = "ska_ser_config_inspector_client", from = "src" }, { include = "tests" } ]

[tool.poetry.dependencies]
python = "^3.10"

urllib3 = ">= 1.25.3"
python-dateutil = ">=2.8.2"
pydantic = ">=2"
typing-extensions = ">=4.7.1"

[tool.poetry.dev-dependencies]
pytest = ">=7.2.1"
types-python-dateutil = ">=2.8.19.14"
build = "0.10.0"

[tool.poetry.group.dev.dependencies]
pytest-cov = "^5.0.0"
pytest-json-report = "^1.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = 'ska'
url = 'https://artefact.skatelescope.org/repository/pypi-all/simple'

[tool.pytest.ini_options]
addopts = "-p no:warnings"
testpaths = [
    "tests"
]
log_cli_level = "INFO"
log_cli = "False"
junit_family="xunit2"
